<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#3949AB">

    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Bio Tracker"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@id/title_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/login_rectangle"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/register_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toTopOf="@id/login_container"
        android:drawableTint="@android:color/black"
        android:inputType="textPersonName"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/register_et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_name"
        android:drawableTint="@android:color/black"
        android:inputType="text"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/register_et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_dob"
        android:drawableTint="@android:color/black"
        android:inputType="textEmailAddress"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/register_et_mob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_mail"
        android:drawableTint="@android:color/black"
        android:inputType="phone"
        android:maxLength="10"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/register_et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_mob"
        android:drawableTint="@android:color/black"
        android:inputType="textPassword"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/register_et_cpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_pass"
        android:drawableTint="@android:color/black"
        android:inputType="textPassword"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/register_et_cpass"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#3949AB"
        android:text="@string/register"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/register_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn_register"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/back_to_login"
        android:textSize="22sp" />

</androidx.constraintlayout.widget.ConstraintLayout>