<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddressActivity"
    android:background="#F44336">

    <TextView
        android:id="@+id/title_add_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Bio Tracker"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/title_add_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/login_rectangle"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/address_et_h_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/house_name"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toTopOf="@id/login_container"
        android:drawableTint="@android:color/black"
        android:inputType="textPersonName"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/address_et_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/address_et_h_name"
        android:drawableTint="@android:color/black"
        android:inputType="text"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/address_et_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pincode"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/address_et_place"
        android:drawableTint="@android:color/black"
        android:inputType="phone"
        android:maxLength="6"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/address_et_dst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/district"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/address_et_pincode"
        android:drawableTint="@android:color/black"
        android:inputType="text"
        android:maxLength="10"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


    <Button
        android:id="@+id/address_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/address_et_dst"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#F44336"
        android:text="@string/add_address"
        android:textSize="22sp" />

</androidx.constraintlayout.widget.ConstraintLayout>