<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#F44336">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Bio Tracker"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/sub_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_login"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="Biofloc Tracking System"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/sub_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/login_rectangle"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/login_et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toTopOf="@id/login_container"
        android:drawableTint="@android:color/black"
        android:inputType="phone"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/login_et_mobile"
        android:drawableTint="@android:color/black"
        android:foregroundTint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@id/login_et_password"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#F44336"
        android:text="@string/login"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/create_an_account"
        android:textSize="22sp" />

</androidx.constraintlayout.widget.ConstraintLayout>